--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,12 +1,16 @@
 .wrapper {
-    font-size: 1.4rem;
-    font-weight: 700;
-    padding: 9px 16px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     min-width: 100px;
+    padding: 9px 16px;
     border-radius: 4px;
+    font-size: 1.6rem;
+    font-weight: 700;
     cursor: pointer;
     background-color: var(--white);
     border: 1px solid transparent;
+    user-select: none;
 
     + .wrapper {
         margin-left: 16px;
@@ -27,6 +31,8 @@
 .title {
     font-size: 16px;
     font-weight: 600;
+    display: flex;
+    align-items: center;
 }
 
 //button types
