--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -10,6 +10,8 @@
     --default-layout-header-height: 60px;
     --deafault-layout-width: 1150px;
     --search-border-radius: 92px;
+    --search-width: 500px;
+    --search-button-width: 38px;
 }
 
 * {
