--- a/src/components/Layout/components/Search/Search.module.scss
+++ b/src/components/Layout/components/Search/Search.module.scss
@@ -9,12 +9,24 @@
 .loading {
     position: absolute;
     right: calc(var(--search-button-width) + 16px);
-    top: 50%;
-    transform: translateY(-50%);
     color: rgba(22, 24, 35, 0.34);
     background-color: transparent;
-    display: flex;
-    align-items: center;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 28px;
+}
+
+.loading {
+    animation: spinner 0.8s linear infinite;
+}
+
+@keyframes spinner {
+    from {
+        transform: translateY(-50%) rotate(0);
+    }
+    to {
+        transform: translateY(-50%) rotate(360deg);
+    }
 }
 
 .search-result {
