useDebounce & lib Axios

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -6,6 +6,8 @@
     --white: #fff;
     --text-color: #161821;
 
+    --font-family: 'ProximaNova', sans-serif;
+
     //Deafult layout
     --default-layout-header-height: 60px;
     --deafault-layout-width: 1150px;
@@ -25,7 +27,7 @@ html {
 }
 
 body {
-    font-family: 'ProximaNova', sans-serif;
+    font-family: var(--font-family);
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
@@ -37,7 +39,6 @@ input,
 [tabindex] {
     outline: none;
     border: none;
-    font-family: 'ProximaNova', sans-serif;
 }
 
 a[href] {
