--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -11,6 +11,7 @@
     background-color: var(--white);
     border: 1px solid transparent;
     user-select: none;
+    font-family: var(--font-family);
 
     + .wrapper {
         margin-left: 16px;
