--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -14,6 +14,10 @@
     justify-content: space-between;
 }
 
+.logo-link {
+    display: flex;
+}
+
 .actions {
     display: flex;
     align-items: center;
