--- a/src/components/Layout/Popper/Menu/Menu.module.scss
+++ b/src/components/Layout/Popper/Menu/Menu.module.scss
@@ -8,6 +8,11 @@
 .menu-popper {
     padding-bottom: 8px;
 }
+
+.menu-body {
+    overflow-y: auto;
+}
+
 // Menu items
 .menu-item {
     width: 100%;
@@ -31,6 +36,7 @@
 //Header
 .header {
     position: relative;
+    flex-shrink: 0;
     height: 50px;
     margin-top: -8px;
 }
