--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,9 +1,14 @@
 .wrapper {
-    height: var(--default-layout-header-height);
-    width: 100%;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
     display: flex;
     justify-content: center;
+    width: 100%;
+    height: var(--default-layout-header-height);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
+    background-color: var(--white);
 }
 
 .inner {
@@ -29,6 +34,24 @@
     color: #161823;
     margin-left: 16px;
     cursor: pointer;
+}
+
+.badge {
+    color: var(--white);
+    font-family: ProximaNova, Arial, Tahoma, PingFangSC, sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    background: var(--primary);
+    min-width: 20px;
+    height: 20px;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    border-radius: 10px;
+    position: absolute;
+    top: 6%;
+    transform: translateX(10px);
 }
 
 .user-avatar {
