--- a/src/layouts/Popper/Menu/Menu.module.scss
+++ b/src/layouts/Popper/Menu/Menu.module.scss
@@ -17,6 +17,7 @@
 .menu-item {
     width: 100%;
     display: flex;
+    align-items: center;
     justify-content: flex-start;
     border-radius: 0;
     padding: 12px 16px;
